<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_challenges_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.andreb.luism.CipherHunt.ChallengesProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbarChallengesProfile"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarChallengesProfile"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:background="#111111">

                <TextView
                    android:id="@+id/enigmaName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/perfil_challenges_profile"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/nome_do_desafio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomeDesafio"
            android:textSize="30dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textStyle="bold"
            android:textColor="#EEE"
            android:layout_marginTop="20dp"
            android:textAlignment="center" />

        <TextView
            android:text="@string/descri_o"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#EEE"
            android:id="@+id/descricaoDesafio"
            android:paddingBottom="20dp"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/n_mero_de_enigmas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#EEE"
            android:id="@+id/nrEnigmasDesafio"
            android:paddingBottom="20dp"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/ainda_n_o_est_inscrito_no_desafio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#EEE"
            android:id="@+id/estadoDesafioPerfil"
            android:paddingBottom="20dp"
            android:textAlignment="center"/>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:foreground="@drawable/gradient_enigmas">

            <Button
                android:text="@string/inscrever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#111"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="#EEE"
                android:id="@+id/inscricaoDesafioPerfil"
                android:onClick="inscrever" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
