<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.andreb.luism.CipherHunt.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbarProfile"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarProfile"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:background="#111111">

                <TextView
                    android:id="@+id/usernameProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#FFFFFF"
                    android:text="Nome"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomeProfile"
            android:paddingBottom="20dp"
            android:textSize="17dp"
            android:textColor="#EEE"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailProfile"
            android:paddingBottom="20dp"
            android:textSize="17dp"
            android:textColor="#EEE"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/localidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/localidadeProfile"
            android:paddingBottom="20dp"
            android:textSize="17dp"
            android:textColor="#EEE"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/desafios_come_ados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nrDesafiosComecadosProfile"
            android:paddingBottom="20dp"
            android:textSize="17dp"
            android:textColor="#EEE"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/desafios_concluidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nrDesafiosConcluidosProfile"
            android:paddingBottom="20dp"
            android:textSize="17dp"
            android:textColor="#EEE"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>


</LinearLayout>
