<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.andreb.luism.CipherHunt.MainMenuActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="70dp"
                android:layout_width="match_parent"
                android:background="#111111">
                <TextView
                    android:id="@+id/bemVindo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bem_vindo"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:text="username"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:textSize="30dp"
            android:paddingBottom="30dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:foreground="@drawable/gradient_enigmas">

            <Button
                android:text="@string/desafios"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDesafios"
                android:background="#000"
                android:elevation="0dp"
                android:onClick="goToChallenges" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:foreground="@drawable/gradient_enigmas">

            <Button
                android:text="@string/mapa"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMapa"
                android:background="#000"
                android:elevation="0dp"
                android:onClick="goToMaps"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:foreground="@drawable/gradient_enigmas">

            <Button
                android:text="@string/perfil"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPerfil"
                android:background="#000"
                android:elevation="0dp"
                android:onClick="goToProfile" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@drawable/gradient_enigmas">

            <Button
                android:text="Logout"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="#000"
                android:id="@+id/buttonLogout"
                android:elevation="0dp"
                android:onClick="goToMain" />
        </FrameLayout>



    </LinearLayout>

</LinearLayout>
