<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.andreb.luism.CipherHunt.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbarLogin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarLogin"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:background="#111111">

                <TextView
                    android:id="@+id/enigmaName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:background="#000">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:inputType="text"
                android:id="@+id/username"
                android:hint="Username"
                android:background="#EEEEEE"
                android:textColorHint="#999"
                android:textColor="#000000"
                android:maxLines="1" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:background="#000">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="Password"
                android:background="#EEEEEE"
                android:textColorHint="#999"
                android:textColor="#000"
                android:maxLines="1" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="@drawable/gradient_enigmas">

            <Button
                android:id="@+id/username_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sess_o"
                android:background="#111"
                android:textColor="#EEE"
                android:textStyle="bold"
                android:onClick="login" />

        </FrameLayout>


        <TextView
            android:text="@string/textviewLoginErro"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30dp"
            android:id="@+id/textViewError" />
    </LinearLayout>

</LinearLayout>
